pyrene-graphs/src/components/BarChartTable/barChartTable.css
@import 'pyrene/dist/colors.css';

.container {
  width: 100%;
}

.labelLink:hover {
  text-decoration: underline;
}

.verticalLine {
  border-left: 1px solid var(--border);
  height: 16px;
}

.showMoreLink {
  margin-top: 8px;
  height: 18px;
  font-size: 13px;
  font-weight: 600;
  color: var(--primary);
  cursor: pointer;
}

.popOverPlaceholder {
  height: 100%;
  width: 100%;
}

.popOverContainer {
  width: 448px;
  padding: 24px 0 24px 24px;
}

.popOverHeader {
  padding-right: 24px;
  display: flex;
  flex-direction: row;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.14;
  letter-spacing: -0.05px;
  height: 32px;
  color: var(--text);
}

.popOverBody {
 overflow-y: auto;
}

.popOverTable {
  padding-right: 24px;
  overflow-y: auto;
}

.tableContainer {
  width: 424px;
}

.footerContainer {
  margin-top: 16px;
}

